[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/dialog_light_layer_detail.gd" type="Script" id=1]

[node name="dialog_light_layer_detail" type="WindowDialog"]
margin_right = 244.0
margin_bottom = 204.0
window_title = "Light Layer Parameters"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="GridContainer" parent="CenterContainer"]
margin_left = 24.0
margin_top = 6.0
margin_right = 219.0
margin_bottom = 198.0
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_shimmerx" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 5.0
margin_right = 101.0
margin_bottom = 19.0
text = "Shimmer X"

[node name="input_shimmerx" type="SpinBox" parent="CenterContainer/VBoxContainer"]
margin_left = 121.0
margin_right = 195.0
margin_bottom = 24.0
max_value = 10.0
step = 0.1

[node name="lbl_shimmery" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 101.0
margin_bottom = 63.0
text = "shimmer Y"

[node name="input_shimmery" type="SpinBox" parent="CenterContainer/VBoxContainer"]
margin_left = 121.0
margin_top = 44.0
margin_right = 195.0
margin_bottom = 68.0
max_value = 10.0
step = 0.1

[node name="lbl_intensity" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 101.0
margin_bottom = 103.0
text = "Intensity"

[node name="input_intensity" type="HSlider" parent="CenterContainer/VBoxContainer"]
margin_left = 121.0
margin_top = 88.0
margin_right = 195.0
margin_bottom = 104.0
max_value = 1.0
step = 0.01
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="lbl_shimmerspd" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 129.0
margin_right = 101.0
margin_bottom = 143.0
text = "Shimmer Speed"

[node name="input_shimmerspd" type="SpinBox" parent="CenterContainer/VBoxContainer"]
margin_left = 121.0
margin_top = 124.0
margin_right = 195.0
margin_bottom = 148.0
max_value = 10.0
step = 0.1
value = 1.0

[node name="glow_layer" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 173.0
margin_right = 101.0
margin_bottom = 187.0
text = "Glow Layer?"

[node name="input_glow" type="CheckBox" parent="CenterContainer/VBoxContainer"]
margin_left = 121.0
margin_top = 168.0
margin_right = 195.0
margin_bottom = 192.0

[connection signal="value_changed" from="CenterContainer/VBoxContainer/input_shimmerx" to="." method="on_shimmerx_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/input_shimmery" to="." method="on_shimmery_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/input_intensity" to="." method="on_intensity_change"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/input_shimmerspd" to="." method="on_shimmerspeed_change"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/input_glow" to="." method="on_glow_change"]
